--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <script crossorigin src="https://unpkg.com/react@15/dist/react.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="index.js" type="text/babel"></script>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Courgette|Croissant+One'>
+    <link rel="stylesheet" href="css/style.css">
+
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.31.2/react-bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="js\index.js" type="text/babel"></script>
   </head>
   <body>
-    <div id="app"></div>
-
+    <div class ="container-fluid">
+        <div id="app"></div>
+        <div class="row">
+          <div class="col-md-12 text-center" id="info">
+            Coded by <a href="https://www.freecodecamp.com/dereje1" target="_blank">DGetahun</a>
+          </div>
+        </div>
+    </div>
   </body>
 </html>
